# Ftech-PubMed-Papers-With-non-academic-authors-from-pharma-biotech-companies-

./: .env  README.md  clean_csv.py  cleaned_results.xlsx  cli.py  main.py  papers_fetcher.py  pyproject.toml  results.csv  results.xlsx
